<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2017 SpiritCroc
    Email: spiritcroc@gmail.com
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/title_settings">

    <PreferenceCategory
        android:title="@string/pref_category_general">

        <EditTextPreference
            android:key="whoami"
            android:title="@string/pref_whoami_title" />

        <EditTextPreference
            android:key="server_url"
            android:title="@string/pref_server_url_title" />

        <EditTextPreference
            android:key="server_login_username"
            android:title="@string/pref_server_login_username_title" />

        <EditTextPreference
            android:key="server_login_password"
            android:title="@string/pref_server_login_password_title"
            android:inputType="textWebPassword"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_ui">

        <ListPreference
            android:key="theme"
            android:title="@string/pref_theme_title"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:defaultValue="0" />

        <PreferenceScreen
            android:title="@string/pref_date_time_format_title"
            android:summary="@string/pref_date_time_format_summary"
            android:fragment="de.spiritcroc.remotepurchaselist.settings.DateTimeFormatSettingsFragment" />

        <CheckBoxPreference
            android:key="dino"
            android:title="@string/pref_dino_title"
            android:summaryOn="@string/pref_dino_summary_on"
            android:summaryOff="@string/pref_dino_summary_off"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_other">

        <Preference
            android:key="discard_cached_instructions"
            android:title="@string/pref_discard_cached_instructions_title" />

        <Preference
            android:key="clear_trusted_certificates"
            android:title="@string/pref_clear_trusted_certificates_title"
            android:summary="@string/pref_clear_trusted_certificates_summary" />

        <PreferenceScreen
            android:title="@string/pref_debug_title"
            android:summary="@string/pref_debug_summary"
            android:fragment="de.spiritcroc.remotepurchaselist.settings.DebugSettingsFragment" />

    </PreferenceCategory>

</PreferenceScreen>
