<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2017 SpiritCroc
    Email: spiritcroc@gmail.com
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/dialog_horizontal_padding"
    android:paddingRight="@dimen/dialog_horizontal_padding"
    android:paddingTop="@dimen/dialog_top_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">
        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_item_name"
            android:completionThreshold="@integer/completion_threshold"
            android:inputType="text"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/info_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_item_info"
            android:completionThreshold="@integer/completion_threshold"
            android:inputType="text"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/usage_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_item_usage"
            android:completionThreshold="@integer/completion_threshold"
            android:inputType="text"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/picture_url_edit_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:layout_gravity="bottom">
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/picture_url_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_item_picture_url"
                android:completionThreshold="@integer/completion_threshold"
                android:inputType="textUri"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/picture_edit"
            android:layout_gravity="center"
            android:layout_width="@dimen/dialog_picture_selection_preview"
            android:layout_height="@dimen/dialog_picture_selection_preview" />
    </LinearLayout>

</LinearLayout>
